// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageCard > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
  </div>
  <!--v-if-->
</section>"
`;

exports[`PageCard > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="body" class="">
        <!--v-if-->
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with leading slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class="">Leading slot</div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Card link" class="peer focus:outline-none"><span class="inset-0 absolute" aria-hidden="true"></span></a>
</div>"
`;
